<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="state"
                type="com.android.aman.weatherforecast.ui.WeatherForecastState"
        />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_weather_forecast">


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="16dp"/>
        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_end="16dp"/>
        <TextView
                android:text="@string/cityName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/tv_city_name"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="27sp"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
                android:layout_marginStart="112dp"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toStartOf="@+id/opneCityName"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp" app:srcCompat="@drawable/forward_button"
                android:id="@+id/opneCityName"
                android:contentDescription="@string/nullDiscription"
                app:layout_constraintTop_toTopOf="@+id/tv_city_name"
                app:layout_constraintBottom_toBottomOf="@+id/tv_city_name"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="80dp"
                app:layout_constraintStart_toEndOf="@+id/tv_city_name" android:layout_marginStart="8dp"
        />
        <ImageView
                android:layout_width="153dp"
                android:layout_height="125dp" app:srcCompat="@drawable/weather_icon"
                android:id="@+id/iv_large_weather_icon"
                android:contentDescription="@string/nullDiscription"
                app:layout_constraintTop_toBottomOf="@+id/tv_city_name"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintDimensionRatio="1:1" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/main_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="27sp"
                android:gravity="center"
                android:id="@+id/tv_main_temp" app:layout_constraintEnd_toEndOf="@+id/iv_large_weather_icon"
                app:layout_constraintStart_toStartOf="@+id/iv_large_weather_icon" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_large_weather_icon"/>
        <TextView
                android:text="@string/main_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_min_temp"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:gravity="end"
                app:layout_constraintEnd_toStartOf="@+id/tv_max_temp"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/tv_main_temp" android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/main_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_max_temp"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:gravity="start"
                app:layout_constraintStart_toEndOf="@+id/tv_min_temp"
                app:layout_constraintTop_toBottomOf="@+id/tv_main_temp" android:layout_marginTop="24dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/weather_discription"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:id="@+id/tv_weahter_discription"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline_left" android:layout_marginStart="8dp"
                android:layout_marginTop="65dp" app:layout_constraintTop_toBottomOf="@+id/tv_main_temp"/>

        <TextView
                android:id="@+id/tv_mid_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="#BDB3B3"
                app:layout_constraintTop_toBottomOf="@+id/tv_weahter_discription"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"/>
        <TextView
                android:id="@+id/tv_day1"
                android:text="@string/temp_day"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_day2"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/tv_mid_line"
                android:layout_marginTop="24dp"/>
        <TextView
                android:text="@string/temp_min_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_min_max_temp1"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_small_weather_icon1"
                app:layout_constraintStart_toStartOf="@+id/iv_small_weather_icon1"
                app:layout_constraintTop_toBottomOf="@+id/iv_small_weather_icon1"
                app:layout_constraintHorizontal_bias="1.0"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/weather_icon"
                android:id="@+id/iv_small_weather_icon1"
                android:contentDescription="@string/nullDiscription"
                app:layout_constraintEnd_toEndOf="@+id/tv_day1"
                app:layout_constraintStart_toStartOf="@+id/tv_day1"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_day1"/>

        <TextView
                android:id="@+id/tv_day2"
                android:text="@string/temp_day"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/tv_day1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/tv_day3"
                app:layout_constraintTop_toBottomOf="@+id/tv_mid_line" android:layout_marginTop="24dp"/>

        <TextView
                android:id="@+id/tv_min_max_temp2"
                android:text="@string/temp_min_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_small_weather_icon2"
                app:layout_constraintStart_toStartOf="@+id/iv_small_weather_icon2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_small_weather_icon2"/>

        <ImageView
                android:id="@+id/iv_small_weather_icon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/weather_icon"
                android:contentDescription="@string/nullDiscription"
                app:layout_constraintEnd_toEndOf="@+id/tv_day2"
                app:layout_constraintStart_toStartOf="@+id/tv_day2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_day2"/>

        <TextView
                android:id="@+id/tv_day3"
                android:text="@string/temp_day"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/tv_day2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/tv_day4"
                app:layout_constraintTop_toBottomOf="@+id/tv_mid_line" android:layout_marginTop="24dp"/>

        <TextView
                android:id="@+id/tv_min_max_temp3"
                android:text="@string/temp_min_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/iv_small_weather_icon3"
                app:layout_constraintStart_toStartOf="@+id/iv_small_weather_icon3"
                app:layout_constraintTop_toBottomOf="@+id/iv_small_weather_icon3"/>

        <ImageView
                android:id="@+id/iv_small_weather_icon3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/nullDiscription"
                app:srcCompat="@drawable/weather_icon"
                app:layout_constraintEnd_toEndOf="@+id/tv_day3"
                app:layout_constraintStart_toStartOf="@+id/tv_day3"
                app:layout_constraintTop_toBottomOf="@+id/tv_day3"/>

        <TextView
                android:id="@+id/tv_day4"
                android:text="@string/temp_day"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/tv_day3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/tv_day5"
                app:layout_constraintTop_toBottomOf="@+id/tv_mid_line" android:layout_marginTop="24dp"/>

        <TextView
                android:id="@+id/tv_min_max_temp4"
                android:text="@string/temp_min_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/iv_small_weather_icon4"
                app:layout_constraintStart_toStartOf="@+id/iv_small_weather_icon4"
                app:layout_constraintTop_toBottomOf="@+id/iv_small_weather_icon4"/>

        <ImageView
                android:id="@+id/iv_small_weather_icon4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/nullDiscription"
                app:srcCompat="@drawable/weather_icon"
                app:layout_constraintEnd_toEndOf="@+id/tv_day4"
                app:layout_constraintStart_toStartOf="@+id/tv_day4"
                app:layout_constraintTop_toBottomOf="@+id/tv_day4"/>

        <TextView
                android:id="@+id/tv_day5"
                android:text="@string/temp_day"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_mid_line"
                app:layout_constraintStart_toEndOf="@+id/tv_day4"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right" android:layout_marginTop="24dp"/>

        <TextView
                android:id="@+id/tv_min_max_temp5"
                android:text="@string/temp_min_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/iv_small_weather_icon5"
                app:layout_constraintStart_toStartOf="@+id/iv_small_weather_icon5"
                app:layout_constraintTop_toBottomOf="@+id/iv_small_weather_icon5"/>

        <ImageView
                android:id="@+id/iv_small_weather_icon5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/weather_icon"
                android:contentDescription="@string/nullDiscription"
                app:layout_constraintEnd_toEndOf="@+id/tv_day5"
                app:layout_constraintStart_toStartOf="@+id/tv_day5"
                app:layout_constraintTop_toBottomOf="@+id/tv_day5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
